--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: dev
     environment:
       - DISPLAY=${DISPLAY}
-    image: merlinnot/dev
+    image: merlinnot/devver
     ports:
       - "3000:3000"
       - "8080:8080"
@@ -14,5 +14,4 @@ services:
     volumes:
       - .:/code
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - ${HOME}/.ssh:/root/.ssh
-      - ${HOME}/.gitconfig:/root/.gitconfig
+      - ${HOME}/.ssh/id_rsa:/root/.ssh/id_rsa
