--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,11 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "polymer": "Polymer/polymer#^1.6.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.7",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
+    "iron-image": "PolymerElements/iron-image#^1.2.5",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
