--- a/bower.json
+++ b/bower.json
@@ -5,21 +5,26 @@
   ],
   "private": false,
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#^0.10.0",
-    "app-route": "PolymerElements/app-route#^0.9.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
-    "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
-    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0",
-    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.7",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
-    "iron-image": "PolymerElements/iron-image#^1.2.5",
-    "iron-icons": "PolymerElements/iron-icons#^1.2.0"
+    "app-layout": "PolymerElements/app-layout#latest",
+    "app-route": "PolymerElements/app-route#latest",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#latest",
+    "iron-media-query": "PolymerElements/iron-media-query#latest",
+    "iron-pages": "PolymerElements/iron-pages#latest",
+    "iron-selector": "PolymerElements/iron-selector#^1.5.2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#latest",
+    "polymer": "Polymer/polymer#latest",
+    "paper-header-panel": "PolymerElements/paper-header-panel#latest",
+    "paper-toolbar": "PolymerElements/paper-toolbar#latest",
+    "iron-image": "PolymerElements/iron-image#latest",
+    "iron-icons": "PolymerElements/iron-icons#latest",
+    "paper-item": "PolymerElements/paper-item#latest",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "marked-element": "PolymerElements/marked-element#^1.2.0",
+    "paper-styles": "PolymerElements/paper-styles#latest",
+    "polymerfire": "^0.10.3",
+    "paper-input": "^1.1.22"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
