--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "paper-button": "PolymerElements/paper-button#^1.0.14",
     "marked-element": "PolymerElements/marked-element#^1.2.0",
     "paper-styles": "PolymerElements/paper-styles#latest",
-    "polymerfire": "^0.10.3",
+    "polymerfire": "latest",
     "paper-input": "^1.1.22"
   },
   "devDependencies": {
