--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-bower_components/
-build/
-node_modules/
+# Dependency directories
+node_modules
+
+# Build output
+dist
+
+# MacOS-specific files
+.DS_Store
