--- a/package.json
+++ b/package.json
@@ -1,20 +1,57 @@
 {
-  "name": "com-slowersilesia",
-  "license": "GNU v3",
-  "scripts": {
-    "lint": "eslint . --ext js,html; exit 0;",
-    "test": "yarn run lint && polymer test",
-    "dev": "polymer serve & yarn run watch",
-    "watch": "browser-sync start --proxy localhost:8080 --files 'src/**/*, images/**/*' "
+  "author": "Natan Sągol <m@merlinnot.com>",
+  "bugs": {
+    "url": "https://github.com/merlinnot/com-slowersilesia/issues"
   },
+  "description": "The homepage of SLower Silesia",
   "devDependencies": {
-    "browser-sync": "^2.18.5",
-    "eslint": "^3.12.0",
-    "eslint-config-google": "^0.7.1",
-    "eslint-plugin-html": "^1.7.0"
+    "browser-sync": "2.24.5",
+    "del": "3.0.0",
+    "firebase-tools": "3.19.3",
+    "gulp": "4.0.0",
+    "gulp-amphtml-validator": "1.0.2",
+    "gulp-autoprefixer": "5.0.0",
+    "gulp-cssnano": "2.1.3",
+    "gulp-plumber": "1.2.0",
+    "gulp-pug": "4.0.1",
+    "gulp-replace": "1.0.0",
+    "gulp-sass": "4.0.1",
+    "husky": "0.14.3",
+    "lint-staged": "7.2.0",
+    "merge-stream": "1.0.1",
+    "prettier": "1.13.7",
+    "through2": "2.0.3"
   },
-  "version": "0.9.0",
-  "description": "SLower Silesia homepage",
-  "main": "index.html",
-  "author": "Natan Sągol <m@merlinnot.com>"
+  "homepage": "https://github.com/merlinnot/com-slowersilesia#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "license": "MIT",
+  "lint-staged": {
+    "*.{js,md,scss}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "main": "dist/index.html",
+  "name": "com-slowersilesia",
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/merlinnot/com-slowersilesia.git"
+  },
+  "scripts": {
+    "build": "gulp build",
+    "format:fix": "prettier --write src/**/*.scss *.{js,md}",
+    "format": "prettier --list-different **/*.scss *.{js,md}",
+    "start:dev": "gulp watch",
+    "deploy": "firebase deploy --project com-slowersilesia",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "0.0.0"
 }
